# serial_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: protocol.yaml  serial_data.yaml
include/serial_pkg/: packet_handler.hpp  protocol.hpp  serial_controller.hpp
launch/: launch_serial.py
scripts/: auto_udev.sh
src/: serial_controller.cpp  serial_node.cpp
test/: test_main.py  test_transmit_verify.cpp
